--- a/html/components.html
+++ b/html/components.html
@@ -3,4 +3,50 @@ layout: default
 title: Components | Gengo Style Guide
 permalink: /components.html
 ---
-{% include components/index.html %}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-2">
+      <ul class="nav">
+        <li><a href="#navs">Navs</a></li>
+        <li><a href="#navbar">Navbar</a></li>
+        <li><a href="#breadcrumb">Breadcrumb</a></li>
+        <li><a href="#pagination">Pagination</a></li>
+        <li><a href="#dropdowns">Dropdowns</a></li>
+        <li><a href="#buttons">Buttons</a></li>
+        <li><a href="#buttons-groups">Buttons Groups</a></li>
+        <li><a href="#buttons-dropdowns">Buttons Dropdowns</a></li>
+        <li><a href="#tables">Tables</a></li>
+        <li><a href="#forms">Forms</a></li>
+        <li><a href="#supported-controls">Supported Controls</a></li>
+        <li><a href="#validation-states">Validation States</a></li>
+        <li><a href="#control-sizing">Control Sizing</a></li>
+        <li><a href="#labels">Labels</a></li>
+        <li><a href="#badges">Badges</a></li>
+        <li><a href="#alerts">Alerts</a></li>
+        <li><a href="#progress-bar">Progress Bar</a></li>
+        <li><a href="#helper-classes">Helper Classes</a></li>
+      </ul>
+    </div>
+
+    <div class="col-xs-10">
+      {% include components/navs.html  %}
+      {% include components/navbar.html  %}
+      {% include components/breadcrumb.html  %}
+      {% include components/pagination.html  %}
+      {% include components/dropdowns.html  %}
+      {% include components/buttons.html  %}
+      {% include components/buttons-groups.html  %}
+      {% include components/buttons-dropdowns.html  %}
+      {% include components/tables.html  %}
+      {% include components/forms.html  %}
+      {% include components/supported-controls.html  %}
+      {% include components/validation-states.html  %}
+      {% include components/control-sizing.html  %}
+      {% include components/labels.html  %}
+      {% include components/badges.html  %}
+      {% include components/alerts.html  %}
+      {% include components/progress-bar.html  %}
+      {% include components/helper-classes.html %}
+    </div>
+  </div>
+</div>
