--- a/liquid/components.html
+++ b/liquid/components.html
@@ -5,7 +5,7 @@ permalink: /components.html
 ---
 <div class="container">
   <div class="row">
-    <div class="col-xs-2">
+    <div class="col-xs-2 ge-nav">
       <ul class="nav">
         <li><a href="#navs">Navs</a></li>
         <li><a href="#navbar">Navbar</a></li>
@@ -28,7 +28,7 @@ permalink: /components.html
       </ul>
     </div>
 
-    <div class="col-xs-10">
+    <div class="col-xs-10 ge-content">
       {% include components/navs.html  %}
       {% include components/navbar.html  %}
       {% include components/breadcrumb.html  %}
