fix style collapse in 'grid.html'
replace css class '.show-grid' to '.ge-show-grid' to escape overlapping styles which are derived from 'docs.min.css'

--- a/liquid/grid.html
+++ b/liquid/grid.html
@@ -7,15 +7,15 @@ permalink: /grid.html
   .container {
     margin-bottom: 36px;
   }
-  .show-grid {
+  .ge-show-grid {
     margin-bottom: 15px;
   }
-  .show-grid p {
+  .ge-show-grid p {
     background-color: #C3EA94;
     text-align: center;
     padding: 16px 0;
   }
-  .box .show-grid p {
+  .box .ge-show-grid p {
     background-color: #CDE496;
   }
   @media (max-width: 720px) {
