import x-editable plugin

--- a/liquid/components.html
+++ b/liquid/components.html
@@ -17,6 +17,7 @@ permalink: /components.html
         <li><a href="#buttons-dropdowns">Buttons Dropdowns</a></li>
         <li><a href="#tables">Tables</a></li>
         <li><a href="#forms">Forms</a></li>
+        <li><a href="#editable-text">Editable text</a></li>
         <li><a href="#supported-controls">Supported Controls</a></li>
         <li><a href="#validation-states">Validation States</a></li>
         <li><a href="#control-sizing">Control Sizing</a></li>
@@ -39,6 +40,7 @@ permalink: /components.html
       {% include components/buttons-dropdowns.html  %}
       {% include components/tables.html  %}
       {% include components/forms.html  %}
+      {% include components/editable-text.html  %}
       {% include components/supported-controls.html  %}
       {% include components/validation-states.html  %}
       {% include components/control-sizing.html  %}
