update style html files and titles

--- a/liquid/style.html
+++ b/liquid/style.html
@@ -10,10 +10,9 @@ permalink: /style.html
       <ul class="nav">
         <li><a href="#logo-usage">Logo usage</a></li>
         <li><a href="#colors">Colors</a></li>
-        <li><a href="#Typography">Typography</a></li>
-        <li><a href="#iconography">Iconography</a></li>
-        <li><a href="#doctype">Doctype</a></li>
-        <li><a href="#flags">Flags</a></li>
+        <li><a href="#typography">Typography</a></li>
+        <li><a href="#icons">Icons</a></li>
+        <li><a href="#doctype-icons">Doctype Icons</a></li>
         <li><a href="#favicons">Favicons</a></li>
         <li><a href="#apple-touch-icons">Apple touch icons</a></li>
       </ul>
@@ -23,10 +22,9 @@ permalink: /style.html
       {% include style/logo-usage.html %}
       {% include style/colors.html %}
       {% include style/typography.html %}
-      {% include style/iconography.html %}
-      {% include style/doctype.html %}
-      {% include style/flags.html %}
       {% include style/favicons.html %}
+      {% include style/icons.html %}
+      {% include style/doctype-icons.html %}
       {% include style/apple-touch-icons.html %}
     </div>
   </div>
