[#73271162] refactoring style page css

--- a/liquid/style.html
+++ b/liquid/style.html
@@ -6,7 +6,7 @@ permalink: /style.html
 ---
 <div class="container">
   <div class="row">
-    <div class="col-xs-2">
+    <div class="col-xs-2 ge-nav">
       <ul class="nav">
         <li><a href="#logo-usage">Logo usage</a></li>
         <li><a href="#colors">Colors</a></li>
@@ -18,7 +18,7 @@ permalink: /style.html
       </ul>
     </div>
 
-    <div class="col-xs-10">
+    <div class="col-xs-10 ge-content">
       {% include style/logo-usage.html %}
       {% include style/colors.html %}
       {% include style/typography.html %}
