update memory icon size & position, update navbar dropdown style

--- a/liquid/navbar.html
+++ b/liquid/navbar.html
@@ -147,35 +147,35 @@ permalink: /navbar.html
           <ul class="dropdown-menu">
             <li>
               <a href="#" class="filter-change" data-type="0">
-                <i class="navbar-icon-empty"></i>
+                <i class="icon-circle filter-all"></i>
                 <span class="text">All</span>
                 <span class="count no-translation-count">0</span>
               </a>
             </li>
             <li>
               <a href="#" class="filter-change" data-type="0">
-                <i class="navbar-icon-empty"></i>
+                <i class="icon-circle filter-empty"></i>
                 <span class="text">Empty</span>
                 <span class="count no-translation-count">0</span>
               </a>
             </li>
             <li>
               <a href="#" class="filter-change" data-type="1">
-                <i class="navbar-icon-translated"></i>
+                <i class="icon-circle filter-unsubmitted"></i>
                 <span class="text">Unsubmitted</span>
                 <span class="count translation-count">0</span>
               </a>
             </li>
             <li>
               <a href="#" class="filter-change" data-type="2">
-                <i class="icon-success"></i>
+                <i class="icon-success filter-success"></i>
                 <span class="text">Submitted</span>
                 <span class="count submitted-count">0</span>
               </a>
             </li>
             <li>
               <a href="#" class="filter-change" data-type="3">
-                <i class="navbar-icon-error"></i>
+                <i class="icon-circle filter-error"></i>
                 <span class="text">Cautions & Errors</span>
                 <span class="count approved-count">0</span>
               </a>
