--- a/liquid/navbar.html
+++ b/liquid/navbar.html
@@ -138,10 +138,13 @@ permalink: /navbar.html
     </div>
     <nav class="collapse navbar-collapse ge-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav border-left">
+        <li><a href="#" class="icon-info"></a></li>
+      </ul>
+      <ul class="nav navbar-nav border-left">
         <li>
-          <a href="#" id="btn-vertical" class="icon-vertical selected"></a>
+          <a href="#" class="icon-vertical selected"></a>
         </li>
-        <li><a href="#" id="btn-horizontal" class="icon-horizontal"></a></li>
+        <li><a href="#" class="icon-horizontal"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle icon-funnel" data-toggle="dropdown"></a>
           <ul class="dropdown-menu">
@@ -182,13 +185,10 @@ permalink: /navbar.html
             </li>
           </ul>
         </li>
+        <li><a href="#" class="icon-validation"></a></li>
       </ul>
       <ul class="nav navbar-nav border-left">
-        <li><a href="#" id="btn-messages" class="icon-comment"></a></li>
-      </ul>
-      <ul class="nav navbar-nav border-left">
-        <li><a href="#" id="btn-validate" class="icon-validation"></a></li>
-        <li><a href="#" id="btn-validate" class="icon-memory"></a></li>
+        <li><a href="#" class="icon-memory"></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
