--- a/liquid/grid.html
+++ b/liquid/grid.html
@@ -3,28 +3,9 @@ layout: default
 title: Grid | Gengo Style Guide
 permalink: /grid.html
 ---
-<style type="text/css">
-  .container {
-    margin-bottom: 36px;
-  }
-  .ge-show-grid {
-    margin-bottom: 15px;
-  }
-  .ge-show-grid p {
-    background-color: #C3EA94;
-    text-align: center;
-    padding: 16px 0;
-  }
-  .box .ge-show-grid p {
-    background-color: #CDE496;
-  }
-  @media (max-width: 720px) {
-    .mobile-disable {
-      display: none;
-    }
-  }
-</style>
-{% include grid/full-width.html %}
-{% include grid/full-width-in-box.html %}
-{% include grid/sidebar-and-box.html %}
-{% include grid/mobile-disable.html %}
+<div class="grid">
+  {% include grid/full-width.html %}
+  {% include grid/full-width-in-box.html %}
+  {% include grid/sidebar-and-box.html %}
+  {% include grid/mobile-disable.html %}
+</div>
