[#66300368] add voice content

--- a/liquid/voice.html
+++ b/liquid/voice.html
@@ -8,6 +8,7 @@ permalink: /voice.html
     <div class="col-xs-2 ge-nav">
       <ul class="nav">
         <li><a href="#core-values">Core values</a></li>
+        <li><a href="#brand-statements">Brand statements</a></li>
         <li><a href="#brand-character">Brand character</a></li>
         <li><a href="#users">Users</a></li>
         <li><a href="#voice-and-tone">Voice and tone</a></li>
@@ -17,6 +18,7 @@ permalink: /voice.html
 
     <div class="col-xs-10 ge-content">
       {% include voice/core-values.html %}
+      {% include voice/brand-statements.html %}
       {% include voice/brand-character.html %}
       {% include voice/users.html %}
       {% include voice/voice-and-tone.html %}
