[#76253826] update left navigation HTML

--- a/liquid/voice.html
+++ b/liquid/voice.html
@@ -6,7 +6,7 @@ permalink: /voice.html
 <div class="container">
   <div class="row">
     <div class="col-xs-2 ge-nav">
-      <ul class="nav">
+      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
         <li><a href="#core-values">Core values</a></li>
         <li><a href="#brand-statements">Brand statements</a></li>
         <li><a href="#brand-character">Brand character</a></li>
