--- a/liquid/style.html
+++ b/liquid/style.html
@@ -7,8 +7,8 @@ permalink: /style.html
 <div class="container">
   <div class="row">
     <div class="col-xs-2 ge-nav">
-      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
-        <li><a href="#logo-usage">Logo usage</a></li>
+      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark affix">
+        <li class="active"><a href="#logo-usage">Logo usage</a></li>
         <li><a href="#colors">Colors</a></li>
         <li><a href="#typography">Typography</a></li>
         <li><a href="#icons">Icons</a></li>
