[#76253826] update affix for docs sidebar

--- a/liquid/components.html
+++ b/liquid/components.html
@@ -6,7 +6,7 @@ permalink: /components.html
 <div class="container">
   <div class="row">
     <div class="col-xs-2 ge-nav">
-      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark affix">
+      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
         <li class="active"><a href="#navs">Navs</a></li>
         <li><a href="#navbar">Navbar</a></li>
         <li><a href="#breadcrumb">Breadcrumb</a></li>
