[#76253826] udpate text on Sarah's feedback

--- a/liquid/components.html
+++ b/liquid/components.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Components | Gengo Style Guide
+title: Components | Gengo style guide
 permalink: /components.html
 ---
 <div class="container">
@@ -13,19 +13,19 @@ permalink: /components.html
         <li><a href="#pagination">Pagination</a></li>
         <li><a href="#dropdowns">Dropdowns</a></li>
         <li><a href="#buttons">Buttons</a></li>
-        <li><a href="#buttons-groups">Buttons Groups</a></li>
-        <li><a href="#buttons-dropdowns">Buttons Dropdowns</a></li>
+        <li><a href="#buttons-groups">Buttons groups</a></li>
+        <li><a href="#buttons-dropdowns">Buttons dropdowns</a></li>
         <li><a href="#tables">Tables</a></li>
         <li><a href="#forms">Forms</a></li>
         <li><a href="#editable-text">Editable text</a></li>
-        <li><a href="#supported-controls">Supported Controls</a></li>
-        <li><a href="#validation-states">Validation States</a></li>
-        <li><a href="#control-sizing">Control Sizing</a></li>
+        <li><a href="#supported-controls">Supported controls</a></li>
+        <li><a href="#validation-states">Validation states</a></li>
+        <li><a href="#control-sizing">Control sizing</a></li>
         <li><a href="#labels">Labels</a></li>
         <li><a href="#badges">Badges</a></li>
         <li><a href="#alerts">Alerts</a></li>
-        <li><a href="#progress-bar">Progress Bar</a></li>
-        <li><a href="#helper-classes">Helper Classes</a></li>
+        <li><a href="#progress-bar">Progress bar</a></li>
+        <li><a href="#helper-classes">Helper classes</a></li>
       </ul>
     </div>
 
