--- a/liquid/style.html
+++ b/liquid/style.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style | Gengo Style Guide
+title: Style | Gengo style guide
 permalink: /style.html
 
 ---
@@ -13,7 +13,7 @@ permalink: /style.html
         <li><a href="#typography">Typography</a></li>
         <li><a href="#favicons">Favicons</a></li>
         <li><a href="#icons">Icons</a></li>
-        <li><a href="#doctype-icons">Doctype Icons</a></li>
+        <li><a href="#doctype-icons">Doctype icons</a></li>
         <li><a href="#apple-touch-icons">Apple touch icons</a></li>
       </ul>
     </div>
