--- a/liquid/voice.html
+++ b/liquid/voice.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Components | Gengo Style Guide
+title: Components | Gengo style guide
 permalink: /voice.html
 ---
 <div class="container">
