[#77590150] add back to top btn

--- a/liquid/style.html
+++ b/liquid/style.html
@@ -16,6 +16,7 @@ permalink: /style.html
         <li><a href="#doctype-icons">Doctype icons</a></li>
         <li><a href="#apple-touch-icons">Apple touch icons</a></li>
       </ul>
+      {% include _template/back-to-top-btn.html %}
     </div>
 
     <div class="col-xs-10 ge-content">
