--- a/liquid/voice.html
+++ b/liquid/voice.html
@@ -14,6 +14,7 @@ permalink: /voice.html
         <li><a href="#voice-and-tone">Voice and tone</a></li>
         <li><a href="#style-guide">Style guide</a></li>
       </ul>
+      {% include _template/back-to-top-btn.html %}
     </div>
 
     <div class="col-xs-10 ge-content">
