--- a/liquid/style.html
+++ b/liquid/style.html
@@ -4,29 +4,5 @@ title: Style | Gengo style guide
 permalink: /style.html
 
 ---
-<div class="container">
-  <div class="row">
-    <div class="col-xs-2 ge-nav">
-      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
-        <li class="active"><a href="#logo-usage">Logo usage</a></li>
-        <li><a href="#colors">Colors</a></li>
-        <li><a href="#typography">Typography</a></li>
-        <li><a href="#favicons">Favicons</a></li>
-        <li><a href="#icons">Icons</a></li>
-        <li><a href="#doctype-icons">Doctype icons</a></li>
-        <li><a href="#apple-touch-icons">Apple touch icons</a></li>
-      </ul>
-      {% include _template/back-to-top-btn.html %}
-    </div>
 
-    <div class="col-xs-10 ge-content">
-      {% include style/logo-usage.html %}
-      {% include style/colors.html %}
-      {% include style/typography.html %}
-      {% include style/favicons.html %}
-      {% include style/icons.html %}
-      {% include style/doctype-icons.html %}
-      {% include style/apple-touch-icons.html %}
-    </div>
-  </div>
-</div>
+{% include style_layout.html %}
